Fixed logo margin on mobile.

--- a/src/sass/app-gui/_header.scss
+++ b/src/sass/app-gui/_header.scss
@@ -1,4 +1,14 @@
 #app-header {
+  .logo {
+    display: inline-block;
+    width: 132px;
+    height: 120px;
+    background: url(/assets/logo/skyblazers-notagline.svg) no-repeat;
+    background-size: 131px 120px;
+    > span {
+      display: none;
+    }
+  }
   > div {
     margin: 10rem auto auto;
     max-width: $app-max-width;
@@ -12,6 +22,11 @@
         margin-right: 3em;
       }
     }
+  }
+}
+@media screen and (min-width: #{$app-column-width * 1.5}) {
+  .logo {
+    margin-left: 35px;
   }
 }
 @media screen and (max-width: #{$app-column-width * 1.5}) {
