--- a/src/sass/blazing.scss
+++ b/src/sass/blazing.scss
@@ -10,17 +10,6 @@ $mquery-mobile-width: 414px; //iPhone+
 @import "app-gui/body";
 @import "app-gui/footer";
 
-.logo {
-  display: inline-block;
-  margin-left: 35px;
-  width: 132px;
-  height: 120px;
-  background: url(/assets/logo/skyblazers-notagline.svg) no-repeat;
-  background-size: 131px 120px;
-  > span {
-    display: none;
-  }
-}
 [data-cross-message]::after {
   overflow: hidden;
   position: absolute;
